# Eight-Winds-Framework

./: .env.cmake  .gitignore  CMakeLists.txt  checks.json  leaf.mtl
include/EWGraphics/: LeafSystem.h  MainWindow.h  PipelineSystem.h  Preprocessor.h  RenderFramework.h  stdafx.h
include/EWGraphics/Data/: EWE_Memory.h  EWE_Utils.h  EngineDataTypes.h  KeyValueContainer.h  MemoryTypeBucket.h  OptionalMutex.h  ThreadPool.h  magic_enum.hpp
include/EWGraphics/Debug/: NsightAftermathGpuCrashTracker.h  NsightAftermathHelpers.h  NsightAftermathShaderDatabase.h  VkDebugDeviceLost.h
include/EWGraphics/Graphics/: Camera.h  LeafSystem.h  Preprocessor.h  RenderFramework.h  SyncHub.h
include/EWGraphics/Graphics/Data/: EWE_Memory.h  EngineDataTypes.h  KeyValueContainer.h  ThreadPool.h
include/EWGraphics/Graphics/Debug/: NsightAftermathGpuCrashTracker.h  NsightAftermathHelpers.h  NsightAftermathShaderDatabase.h  VkDebugDeviceLost.h  VulkanAfterCrash.h
include/EWGraphics/Graphics/Model/: Basic_Model.h  Model.h  Vertex.h
include/EWGraphics/Graphics/Texture/: Cube_Texture.h  Image.h  ImageFunctions.h  Image_Manager.h  Material_Textures.h  Sampler.h  UI_Texture.h
include/EWGraphics/Graphics/Vulkan/: CommandCallbacks.h  DebugNaming.h  DescriptorHandler.h  Descriptors.h  Device.hpp  Device_Buffer.h  EWE_Object.h  Pipeline.h  PipelineBarrier.h  PipelineSystem.h  QueueSyncPool.h  Renderer.h  Swapchain.hpp  TransferCommandManager.h  TransitionManager.h  VulkanHeader.h
include/EWGraphics/Model/: Basic_Model.h  Model.h  Vertex.h
include/EWGraphics/Texture/: Cube_Texture.h  Image.h  ImageFunctions.h  Image_Manager.h  Material_Textures.h  Sampler.h  UI_Texture.h
include/EWGraphics/Vulkan/: CommandCallbacks.h  ComputePipeline.h  DebugNaming.h  Descriptors.h  Device.hpp  Device_Buffer.h  GraphicsPipeline.h  PipeLayout.h  Pipeline.h  PipelineBarrier.h  QueueSyncPool.h  Renderer.h  Shader.h  Swapchain.hpp  SyncHub.h  TransferCommandManager.h  VulkanHeader.h  vk_mem_alloc.h
include/EWGraphics/imgui/: imGuiHandler.h  imgui.h  imnodes.h  imnodes_internal.h  implot.h  implot_demo.h  implot_internal.h
include/EWGraphics/imgui/backends/: imgui_impl_glfw.h  imgui_impl_vulkan.h
include/EWGraphics/resources/: LeafMesh.h  LeafNames.h  LeafTex.h  LoadingFrag.h  LoadingVert.h  common.h
src/: Basic_Model.cpp  Camera.cpp  CommandCallbacks.cpp  ComputePipeline.cpp  Cube_Texture.cpp  DebugNaming.cpp  DescriptorHandler.cpp  Descriptors.cpp  Device.cpp  Device_Buffer.cpp  EWE_Memory.cpp  EWE_Object.cpp  EngineDataTypes.cpp  GraphicsPipeline.cpp  Image.cpp  ImageFunctions.cpp  Image_Manager.cpp  LeafMesh.cpp  LeafNames.cpp  LeafSystem.cpp  LeafTex.cpp  LoadingFrag.cpp  LoadingVert.cpp  MainWindow.cpp  Material_Textures.cpp  Model.cpp  NsightAftermathGpuCrashTracker.cpp  NsightAftermathShaderDatabase.cpp  PipeLayout.cpp  Pipeline.cpp  PipelineBarrier.cpp  PipelineSystem.cpp  QueueSyncPool.cpp  RenderFramework.cpp  Renderer.cpp  Sampler.cpp  Shader.cpp  Swapchain.cpp  SyncHub.cpp  ThreadPool.cpp  (+19 more)
